codama-syn-helpers/tests-macros/tests/as_path_value/from_expr.fail.rs
use codama_syn_helpers_test_macros::as_path_value;

#[as_path_value("hello")]
pub struct Test;

fn main() {}
